# rust_mess

./: README.md
.github/: copilot-instructions.md
.github/workflows/: rust-ci.yml
docs/: hardware-debugging.md
esp/: Cargo.toml  build.rs
esp/.cargo/: config.toml
esp/src/: analog.rs  main.rs  networking.rs  timeconversion.rs
mess_lib/: Cargo.toml
mess_lib/src/: lib.rs  reset_on_failure_count.rs
mess_lib/tests/: hello_test.rs  test_reset_on_failure_count.rs
