[package]
name = "mess_esp"
version = "0.1.0"
authors = ["Dr. Marco Klement <marco-klement-git@leuchtstark.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.86"

[[bin]]
name = "esp"
path = "./src/main.rs"
test = false
doctest = false
bench = false

[[test]]
harness = false
bench = false
name    = "hello_test"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = 2

[features]
default = []

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32", "unstable"] }
rtt-target = "0.6.1"
esp-alloc = "0.8.0"
esp-wifi = { version = "0.15.0", features = [
  "ble",
  "builtin-scheduler",
  "coex",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "wifi",
] }
mess_lib               = {path = "../mess_lib"}
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
tinymqtt = "0.1.3"
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2.0"

[dev-dependencies]
embedded-test = { version = "0.6.0", features = ["xtensa-semihosting"] }

[build-dependencies]
embuild = "0.33"
